--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Generate changelog since last tag
       uses: mathiasvr/command-output@v1
-      continue-on-error: true
+      # continue-on-error: true
       id: changelog
       with:
         run: git log --format="* %s" ${{ steps.get-latest-tag.outputs.tag }}..HEAD | grep -v "(IGNORE)"
@@ -40,9 +40,9 @@ jobs:
     #   run: |
     #     echo ${{ steps.changelog.outputs.stdout }}
 
-    - name: Log changelog stderr
-      run: |
-        echo ${{ steps.changelog.outputs.stderr }}
+    # - name: Log changelog stderr
+    #   run: |
+    #     echo ${{ steps.changelog.outputs.stderr }}
 
     - name: Stop after debugging
       uses: actions/github-script@v3
