--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "c2patool"
-version = "0.3.0"
+
+# Please do not manually edit `version`. Version updates will be generated
+# automatically when c2patool is published. Remember to use (MINOR) or (MAJOR)
+# tags in the PR title to trigger non-patch updates as needed.
+version = "0.2.1"
+
 description = "Command line tool for displaying and adding C2PA manifests"
 authors = ["Gavin Peacock <gpeacock@adobe.com>", "Maurice Fisher <mfisher@adobe.com>"]
 license = "MIT OR Apache-2.0"
