--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,5 @@ predicates = "2.1"
 
 [profile.release] 
 strip = true  # Automatically strip symbols from the binary. 
-# opt-level = "z"  # Optimize for size. 
+opt-level = 3
 lto = "thin" # Link time optimization. 
