--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ repository = "https://github.com/contentauth/c2patool"
 anyhow = "1.0"
 c2pa = { version = "0.15.0",features = ["bmff", "fetch_remote_manifests", "file_io",  "xmp_write"]}
 env_logger = "0.9"
+glob = "0.3"
 log = "0.4" 
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
