--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = { version = "0.15.0",features = ["bmff", "fetch_remote_manifests", "file_io",  "xmp_write"]}
+#c2pa = { version = "0.15.0",features = ["bmff", "fetch_remote_manifests", "file_io",  "xmp_write"]}
 env_logger = "0.9"
 glob = "0.3"
 log = "0.4" 
@@ -28,6 +28,11 @@ serde_derive = "1.0"
 serde_json = "1.0"
 structopt = "0.3"
 tempfile = "3.3"
+
+[dependencies.c2pa]
+git = "https://github.com/contentauth/c2pa-rs.git"
+branch = "hack_tree_dump"
+features = ["bmff", "fetch_remote_manifests", "file_io",  "xmp_write"]
 
 [dev-dependencies]
 assert_cmd = "2.0"
