--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ repository = "https://github.com/contentauth/c2patool"
 [dependencies]
 anyhow = "1.0"
 #c2pa = { version = "0.15.0",features = ["bmff", "fetch_remote_manifests", "file_io",  "xmp_write"]}
+c2pa = { path = "../c2pa-rs/sdk", features = ["bmff", "fetch_remote_manifests", "file_io",  "xmp_write"]}
 env_logger = "0.9"
 glob = "0.3"
 log = "0.4" 
@@ -29,10 +30,10 @@ serde_json = "1.0"
 structopt = "0.3"
 tempfile = "3.3"
 
-[dependencies.c2pa]
-git = "https://github.com/contentauth/c2pa-rs.git"
-branch = "hack_tree_dump"
-features = ["bmff", "fetch_remote_manifests", "file_io",  "xmp_write"]
+#[dependencies.c2pa]
+#git = "https://github.com/contentauth/c2pa-rs.git"
+#branch = "hack_tree_dump"
+#features = ["bmff", "fetch_remote_manifests", "file_io",  "xmp_write"]
 
 [dev-dependencies]
 assert_cmd = "2.0"
