C2PA-55: Use of the `C2PA` font table. (#4)
* Anchor Chrono to 0.4.24 for all packages.
* Update the c2pa-rs to the latest support for C2PA and 0.20.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = {git = "https://github.com/Monotype/c2pa-rs", branch = "monotype/fontSupport", features=["otf", "fetch_remote_manifests", "file_io",  "xmp_write"]}
+c2pa = { git = "https://github.com/Monotype/c2pa-rs", branch = "monotype/fontSupport", features=["otf", "fetch_remote_manifests", "file_io",  "xmp_write"] }
+chrono = { version = "0.4.24" }
 clap = { version = "3.2", features = ["derive"] }
 env_logger = "0.9"
 log = "0.4" 
