--- a/.github/workflows/per-commit-builds.yml
+++ b/.github/workflows/per-commit-builds.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   publish-binaries:
-    name: Publish c2patool binaries
+    name: Publish interim binaries
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -23,8 +23,6 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      with:
-        ref: ${{ needs.repo-prep.outputs.commit-hash }}
 
     - name: Install Rust toolchain
       uses: actions-rs/toolchain@v1
@@ -42,7 +40,7 @@ jobs:
     - name: Upload build as artifact
       uses: actions/upload-artifact@v3
       with:
-        name: target/${{ matrix.artifact_name }}
-        path: ${{ matrix.artifact_name }}
+        path: target/${{ matrix.artifact_name }}
+        name: ${{ matrix.artifact_name }}
         retention-days: 15
         if-no-files-found: error
