--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,3 +135,44 @@ jobs:
         with:
           version: latest
           args: --all-targets --all-features
+
+  publish-interim-binaries:
+    name: Publish interim binaries
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        include:
+        - os: macos-latest
+          artifact_name: c2patool_mac_universal.zip
+        - os: ubuntu-latest
+          artifact_name: c2patool_linux_intel.tar.gz
+        - os: windows-latest
+          artifact_name: c2patool_win_intel.zip
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Install Rust toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        components: llvm-tools-preview
+        override: true
+
+    - name: Cache Rust dependencies
+      uses: Swatinem/rust-cache@v1
+
+    - name: Run make release
+      run: make release
+
+    - name: Upload build as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        path: target/${{ matrix.artifact_name }}
+        name: ${{ matrix.artifact_name }}
+        retention-days: 15
+        if-no-files-found: error
