--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust_version }}
           components: llvm-tools-preview
@@ -55,11 +55,8 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-
+        uses: dtolnay/rust-toolchain@stable
+ 
       - name: Install clippy
         run: rustup component add clippy
 
@@ -81,11 +78,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Install nightly toolchain
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          toolchain: nightly
-          override: true
           components: rustfmt
 
       - name: Check format
@@ -124,11 +119,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
+      - name: Install nightly Rust toolchain
+        uses: dtolnay/rust-toolchain@nightly
 
       - name: Run cargo-udeps
         uses: aig787/cargo-udeps-action@v1
