--- a/.github/workflows/publish-and-release.yml
+++ b/.github/workflows/publish-and-release.yml
@@ -77,9 +77,7 @@ jobs:
         CHANGELOG: ${{ steps.generate-changelog.outputs.stdout }}
 
     - name: Install Rust toolchain
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
+      uses: dtolnay/rust-toolchain@stable
 
     - name: Bump crate versions
       run: |
@@ -155,11 +153,10 @@ jobs:
         ref: ${{ needs.repo-prep.outputs.commit-hash }}
 
     - name: Install Rust toolchain
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@master
       with:
         toolchain: ${{ matrix.rust_version }}
         components: llvm-tools-preview
-        override: true
 
     - name: Cache Rust dependencies
       uses: Swatinem/rust-cache@v1
