--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -11,19 +11,12 @@ jobs:
     name: Create snapshot
     runs-on: ubuntu-latest
 
-    outputs:
-      new-tag: ${{ steps.set-nightly-version.outputs.version }}
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
         token: ${{ secrets.GH_ADMIN_COMMIT_TOKEN }}
-
-    - name: Get latest existing tag
-      uses: WyriHaximus/github-action-get-previous-tag@v1
-      id: get-latest-tag
 
     - name: Set new proposed version
       uses: paulhatch/semantic-version@v5.2.1
@@ -39,28 +32,15 @@ jobs:
       run: |
         echo version=${{ steps.set-version.outputs.version }}-nightly+`date +%F`-`git rev-parse --short HEAD` >> "$GITHUB_OUTPUT"
 
-    - name: Generate changelog since last tag
-      id: generate-changelog
-      run: |
-        {
-          echo 'changelog<<EOF'
-          git log --format="* %s" ${{ steps.get-latest-tag.outputs.tag }}..HEAD | { grep -v "(IGNORE)" || :; }
-          echo EOF
-        } >> "$GITHUB_OUTPUT"
-
     - name: Log new version & changelog
       run: |
         echo "Proposed new version: $VERSION"
         echo "Nightly version: $NIGHTLY_VERSION"
-        echo "Latest tag detected: $LATEST_TAG"
-        echo "Changelog: $CHANGELOG"
       env:
         VERSION: ${{ steps.set-version.outputs.version }}
         NIGHTLY_VERSION: ${{ steps.set-nightly-version.outputs.version }}
-        LATEST_TAG: ${{ steps.get-latest-tag.outputs.tag }}
-        CHANGELOG: ${{ steps.generate-changelog.outputs.changelog }}
 
-    - name: Bump crate versions
+    - name: Bump c2patool crate version
       run: |
         sed -i "s/^version = \"[^\"]*\"$/version = \"$VERSION\"/;" Cargo.toml
       env:
@@ -69,15 +49,7 @@ jobs:
     - name: Swap in nightly c2pa-rs build
       run: |
         sed -i "s/^c2pa = { version = \"[^\"]*\",/c2pa = { git = \"https:\\/\\/github.com\\/contentauth\\/c2pa-rs.git\", branch = \"nightly\",/;" Cargo.toml
-  
-    - name: Update changelog
-      run: |
-        (head -8 CHANGELOG.md && echo "## $VERSION" && date "+_%d %B %Y_" && echo "" && (echo "$CHANGELOG" | sed -E 's_\(#([0-9]+)\)_([#\1](https://github.com/contentauth/c2pa-rs/pull/\1)\)_') && tail -n +9 CHANGELOG.md) > CHANGELOG.new.md
-        mv CHANGELOG.new.md CHANGELOG.md
-      env:
-        VERSION: ${{ steps.set-version.outputs.version }}
-        CHANGELOG: ${{ steps.generate-changelog.outputs.changelog }}
-  
+
     - name: Install Rust toolchain
       uses: dtolnay/rust-toolchain@stable
       with:
@@ -91,7 +63,7 @@ jobs:
     - name: Report differences for "prepare (release)" commit
       run: git diff
 
-    - name: Commit Cargo.toml, Cargo.lock, and changelog
+    - name: Commit Cargo.toml and Cargo.lock
       uses: stefanzweifel/git-auto-commit-action@v4
       id: commit
       with:
@@ -110,7 +82,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [windows-latest, macos-latest, ubuntu-latest]
         include:
         - os: macos-latest
           artifact_name: c2patool_mac_universal.zip
