--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = { git = "https://github.com/Monotype/c2pa-rs", branch = "monotype/fontSupport", features=["otf", "fetch_remote_manifests", "file_io", "add_thumbnails", "xmp_write", "pdf"] }
+c2pa = { git = "https://github.com/Monotype/c2pa-rs", branch = "feature/C2PA-272/catchUp", features=["otf", "fetch_remote_manifests", "file_io", "add_thumbnails", "xmp_write", "pdf"] }
 chrono = { version = "0.4.24" }
 clap = { version = "3.2", features = ["derive"] }
 env_logger = "0.9"
