--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,20 +19,33 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = { version = "0.28.2", features = ["fetch_remote_manifests", "file_io", "add_thumbnails", "xmp_write", "pdf"]}
+c2pa = { version = "0.28.2", features = ["fetch_remote_manifests", "file_io", "add_thumbnails", "xmp_write", "pdf"] }
 clap = { version = "3.2", features = ["derive"] }
 env_logger = "0.9"
-log = "0.4" 
+log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 tempfile = "3.3"
+async-trait = "0.1.72"
+pem = "3.0.3"
+openssl = { version = "0.10.61", features = ["vendored"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
 predicates = "2.1"
+mockall = "0.12.1"
 
-[profile.release] 
+[profile.release]
 strip = true  # Automatically strip symbols from the binary. 
 opt-level = 3
 lto = "thin" # Link time optimization.
+
+[[bin]]
+name = "signer-process-fail"
+
+[[bin]]
+name = "signer-process-no-stdout"
+
+[[bin]]
+name = "signer-process-success"
