--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ reqwest = { version = "0.12.4", features = ["blocking"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.14"
+httpmock = "0.7.0"
 predicates = "2.1"
 mockall = "0.12.1"
 
