--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = { version = "0.31.1", features = [
+c2pa = { version = "0.31.3", features = [
 	"fetch_remote_manifests",
 	"file_io",
 	"add_thumbnails",
@@ -40,6 +40,7 @@ tempfile = "3.3"
 pem = "3.0.3"
 openssl = { version = "0.10.61", features = ["vendored"] }
 reqwest = { version = "0.12.4", features = ["blocking"] }
+url = "2.5.0"
 
 [dev-dependencies]
 assert_cmd = "2.0.14"
