--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,10 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = { version = "0.31.3", features = [
+c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch = "gpeacock/tests_and_fixes", features = [
 	"fetch_remote_manifests",
 	"file_io",
 	"add_thumbnails",
-	"xmp_write",
 	"pdf",
 ] }
 clap = { version = "4.5.2", features = ["derive", "env"] }
