--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch = "gpeacock/tests_and_fixes", features = [
+c2pa = { version = "0.32.0", features = [
 	"fetch_remote_manifests",
 	"file_io",
 	"add_thumbnails",
