--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ predicates = "2.1"
 mockall = "0.12.1"
 
 [package.metadata.binstall]
+# Use defaults
 
 [profile.release]
 strip = true  # Automatically strip symbols from the binary. 
