--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-# c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch = "ok-nick/iter_tree", features = [
-c2pa = { path = "../c2pa-rs/sdk", features = [
+c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch = "ok-nick/it+bbp", features = [
 	"fetch_remote_manifests",
 	"file_io",
 	"add_thumbnails",
