--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch = "ok-nick/it+bbp", features = [
+c2pa = { git = "https://github.com/contentauth/c2pa-rs.git", branch = "ok-nick/builder_base_path", features = [
 	"fetch_remote_manifests",
 	"file_io",
 	"add_thumbnails",
