--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,14 +22,15 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
-c2pa = { version = "0.33.2", features = [
-	"fetch_remote_manifests",
-	"file_io",
-	"add_thumbnails",
-	"pdf",
-] }
+#c2pa = { version = "0.33.2", features = [
+#	"fetch_remote_manifests",
+#	"file_io",
+#	"add_thumbnails",
+#	"pdf",
+#] }
 clap = { version = "4.5.10", features = ["derive", "env"] }
 env_logger = "0.11.4"
+glob = "0.3.1"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
@@ -39,6 +40,10 @@ pem = "3.0.3"
 openssl = { version = "0.10.61", features = ["vendored"] }
 reqwest = { version = "0.12.4", features = ["blocking"] }
 url = "2.5.0"
+
+[dependencies.c2pa]
+path = "../c2pa-rs/sdk"
+features = ["fetch_remote_manifests", "file_io"]
 
 [dev-dependencies]
 assert_cmd = "2.0.14"
