--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,27 @@
 name: CI
 
 on:
+  workflow_dispatch:
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - labeled
   push:
-    branches: main
+    branches:
+      - main
+      - nightly
   schedule:
-    - cron: "0 18 * * 1,4,6" # 1800 UTC every Monday, Thursday, Saturday
+    - cron: "30 18 * * 1,4,6" # 1830 UTC every Monday, Thursday, Saturday
 
 jobs:
   tests:
     name: Unit tests
-    if: contains(github.event.pull_request.labels.*.name, 'safe to test')
+    if: |
+      contains(github.event.pull_request.labels.*.name, 'safe to test') ||
+      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'MEMBER'
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -49,7 +60,10 @@ jobs:
 
   clippy_check:
     name: Clippy
-    if: contains(github.event.pull_request.labels.*.name, 'safe to test')
+    if: |
+      contains(github.event.pull_request.labels.*.name, 'safe to test') ||
+      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'MEMBER'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -71,6 +85,10 @@ jobs:
 
   cargo_fmt:
     name: Enforce Rust code format
+    if: |
+      contains(github.event.pull_request.labels.*.name, 'safe to test') ||
+      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'MEMBER'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -86,6 +104,10 @@ jobs:
 
   cargo-deny:
     name: License / vulnerability audit
+    if: |
+      contains(github.event.pull_request.labels.*.name, 'safe to test') ||
+      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'MEMBER'
     runs-on: ubuntu-latest
 
     strategy:
@@ -109,6 +131,10 @@ jobs:
 
   unused_deps:
     name: Check for unused dependencies
+    if: |
+      contains(github.event.pull_request.labels.*.name, 'safe to test') ||
+      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'MEMBER'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
