--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,17 @@ on:
     - cron: "30 18 * * 1,4,6" # 1830 UTC every Monday, Thursday, Saturday
 
 jobs:
+  debug:
+    name: Debug context
+    runs-on: ubuntu-latest
+    steps:
+      - name: Debug context
+        env:
+          ASSOC: ${{ github.event.pull_request.author_association }}
+        run: |
+          echo author_association = $ASSOC
+
+      
   tests:
     name: Unit tests
     if: |
