--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
     name: Unit tests
     if: |
       contains(github.event.pull_request.labels.*.name, 'safe to test') ||
-      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
       github.event.pull_request.author_association == 'MEMBER'
     runs-on: ${{ matrix.os }}
 
@@ -73,7 +73,7 @@ jobs:
     name: Clippy
     if: |
       contains(github.event.pull_request.labels.*.name, 'safe to test') ||
-      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
       github.event.pull_request.author_association == 'MEMBER'
     runs-on: ubuntu-latest
     steps:
@@ -98,7 +98,7 @@ jobs:
     name: Enforce Rust code format
     if: |
       contains(github.event.pull_request.labels.*.name, 'safe to test') ||
-      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
       github.event.pull_request.author_association == 'MEMBER'
     runs-on: ubuntu-latest
     steps:
@@ -117,7 +117,7 @@ jobs:
     name: License / vulnerability audit
     if: |
       contains(github.event.pull_request.labels.*.name, 'safe to test') ||
-      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
       github.event.pull_request.author_association == 'MEMBER'
     runs-on: ubuntu-latest
 
@@ -144,7 +144,7 @@ jobs:
     name: Check for unused dependencies
     if: |
       contains(github.event.pull_request.labels.*.name, 'safe to test') ||
-      github.event.pull_request.author_association == 'OWNER' ||
+      github.event.pull_request.author_association == 'COLLABORATOR' ||
       github.event.pull_request.author_association == 'MEMBER'
     runs-on: ubuntu-latest
     steps:
