--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ repository = "https://github.com/contentauth/c2patool"
 
 [dependencies]
 anyhow = "1.0"
+atree = "0.5.2"
 c2pa = { git="https://github.com/contentauth/c2pa-rs", branch = "main", features = [
 #c2pa = { version = "0.37.0", features = [
 	"fetch_remote_manifests",
@@ -38,6 +39,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 tempfile = "3.3"
+treeline = "0.1.0"
 pem = "3.0.3"
 openssl = { version = "0.10.61", features = ["vendored"] }
 reqwest = { version = "0.12.4", features = ["blocking"] }
