--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,7 @@ repository = "https://github.com/contentauth/c2patool"
 [dependencies]
 anyhow = "1.0"
 atree = "0.5.2"
-c2pa = { git="https://github.com/contentauth/c2pa-rs", branch = "main", features = [
-#c2pa = { version = "0.37.0", features = [
+c2pa = { version = "0.38.0", features = [
 	"fetch_remote_manifests",
 	"file_io",
 	"add_thumbnails",
